Bug #6662 Importing mysqldumps can give excessive amounts of warnings
Submitted: 16 Nov 2004 11:37 Modified: 3 Mar 2005 17:37
Reporter: Tobias Asplund
Status: Closed
Category:Client Severity:S3 (Non-critical)
Version:4.1 OS:Any (All)
Assigned to: Lars Thalmann Target Version:

[16 Nov 2004 11:37] Tobias Asplund
Description:
Currently notes gets displayed as warnings when importing a mysqldumped file, if you are
restoring a backup, for example, you will not trust the import/restore to be correct if
you do get warnings, so something should be done for this.

How to repeat:
an example is DROP TABLE IF EXISTS... it'll generate a warning if the table does not
exist.
[22 Feb 2005 15:24] Lars Thalmann
This has now been pushed into 4.1 tree and will most likely be included in 
the next 4.1.11 release.

A new session option SQL_NOTES was introduced.  If this is set, then 
warnings of level NOTES are shows as usual, but if this is cleared, they 
are ignored.  SHOW VARIABLES shows this variable and it is boolean.
When using 'mysqldump' new SET commands are introduced in the dump
making all notes be ignored when applying the dump.

ChangeSet@1.2165.17.2, 2005-02-22 12:40:31+01:00, lars@mysql.com
  BUG#6662: Changes after Guilhems and Sergs review

ChangeSet@1.2165.17.1, 2005-02-21 18:40:28+01:00, lars@mysql.com
  BUG#6662: Importing mysqldumps should not show any warnings of level "notes".
[3 Mar 2005 17:37] Paul DuBois
Noted in 4.1.11/5.0.3 changelogs.

Mentioned in SET OPTION, SHOW WARNINGS, and
dynamic system variables manual sections.