BUG#6662: Importing mysqldumps should not show any warnings of level "notes".